the_project/manifests/backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      labels:
        app: todobackend
    spec:
      containers:
        - name: todoapp
          image: joveful/todo-backend1
