the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todoapp
          image: joveful/todo-app3
          volumeMounts:
            - name: shared-image
              mountPath: /app/data
