the_project/manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3000
