the_project/manifests/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todobackend
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 4000
